--- a/README
+++ b/README
@@ -1,2 +1,18 @@
-mallanJS
+<h1>mallanJS</h1>
     --by allanma maqh1988@gmail.com
+<h2>Client Javascript + NodeJS开发的前端框架</h2>
+<div>按功能拆分模块，划分命名空间；
+利用轻量级的注释命令管理模块依赖
+如://@require dom.element
+使用require方式加载所需模块，使用者无须关心模块的依赖关系，只需了解组件层面的模块使用方式
+如:
+    Mallan.require("plugin.photoslide",function(){
+        new Mallan.plugin(someDom,{
+            autoSwitchTime:5000
+        });
+    });
+任何模块都不会被重复加载，任何多余模块都不会被加载。
+</div>
+
+
+
