--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-<h1>mallanJS</h1>
+mallanJS
     --by allanma maqh1988@gmail.com
-<h2>Client Javascript + NodeJS开发的前端框架</h2>
-<div>按功能拆分模块，划分命名空间；
+Client Javascript + NodeJS开发的前端框架
+
+按功能拆分模块，划分命名空间,引入全局变量Mallan和$。$作为快捷方式，任何使用到$的地方都可以用标准方式取代。
 利用轻量级的注释命令管理模块依赖
 如://@require dom.element
 使用require方式加载所需模块，使用者无须关心模块的依赖关系，只需了解组件层面的模块使用方式
@@ -12,7 +13,37 @@
         });
     });
 任何模块都不会被重复加载，任何多余模块都不会被加载。
-</div>
+
+复杂的内部处理逻辑，简洁的外部调用方式。
+Mallan.util.loader({
+    url:"someurl",
+    callback:function(){}
+});
+
+高效的选择器，丰富简洁的DOM操作API
+$(".someclass a").hover(function(){
+    $(this).addClass('hover');
+},function(){
+    $(this).removeClass('hover');
+});
+
+丰富的插件，便捷的扩展
+$.dom.element.extend({
+    'myExtendFunction':function(){
+        //do something
+    }
+});
+$.extend({
+    'require':function(){}
+});
+$.extendCustom({
+    name:'page',
+    cls:page,
+    constructType:'single'
+});
+
+
+
 
 
 
